# 1337-pizza-backend

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: pipeline.yml
.gitlab/issue_templates/: CheckListLab_3.md  CheckListLab_8.md  CheckListLab_9.md
app/: main.py
app/api/v1/: router.py
app/database/: connection.py  models.py
app/database/migrations/: env.py
doc/local_dev_setup/: README.md
doc/tooling/: README.md
infra/build_artifacts/: development.dockerfile  development_typescript.dockerfile  docker-entrypoint.sh  release.dockerfile  smoke.sh  tsconfig.json
infra/deployment/: deployment-production.yaml  deployment-staging.yaml
pizza_1337_preact/: .devcontainer.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pizza_1337_preact/api_scanner_typescript/: README.md  openapi.json  package-lock.json  package.json
pizza_1337_preact/api_scanner_typescript/src/: test.ts
pizza_1337_preact/src/: App.css  AppComponent.tsx  AppLogic.ts  constants.ts  index.tsx  types.ts
pizza_1337_preact/src/api/: index.ts
pizza_1337_preact/src/components/: BeveragesListComponent.tsx  CreateInventoryDialog.tsx  CreateOrderDialog.tsx  CreatePizzaTypeDialog.tsx  DoughListComponent.tsx  ErrorDialogComponent.tsx  OrderComponent.tsx  OrderDetailsComponent.tsx  OrderListComponent.tsx  PizzaTypeComponent.tsx  PizzaTypesListComponent.tsx  ShowAndCopyIDComponent.tsx  ToppingsListComponent.tsx  UserComponent.tsx
pizza_1337_preact/src/tests/: setup.ts
(+123 files in other folders)
